# spatial_scene_grammars

./: .gitignore  pyproject.toml  requirements.txt
models/: draw_collision_geometry.py
sandbox/: debug_parsing_issue.py  drake_static_equilibrium_problem.py  draw_model_in_meshcat_cpp.py
spatial_scene_grammars/: distributions.py  drake_interop.py  nodes.py  parameter_estimation.py  rules.py  sampling.py  scene_grammar.py  visualization.py
spatial_scene_grammars/test/: gaussian_grammar.py  grammar.py  test_distributions.py  test_grammar.py  test_nodes.py  test_parameter_estimation.py  test_parsing.py  test_rules.py  test_sampling.py  test_torch_util.py
spatial_scene_grammars_examples/dimsum_restaurant/: .gitignore  README.md  generate_target_dataset_parallel.py  grammar.py  test_grammar.py
spatial_scene_grammars_examples/dish_bin/: draw_every_training_example.py  draw_samples_from_fit_grammar.py  utils.py
spatial_scene_grammars_examples/planar_clusters_gaussians/: profile_vi.py
spatial_scene_grammars_examples/restaurant/: demo_sampling.ipynb
spatial_scene_grammars_examples/table/: .gitignore  baseline_post_fit_grammar_draws.pickle  baseline_post_fit_grammar_state_dict.torch  decorate_scenes_parallel.py  demo_parameter_estimation.ipynb  example_feasible_sampled_scene.pickle  extract_dataset.py  generate_decorated_scenes.ipynb  generate_target_dataset.ipynb  generate_target_dataset_parallel.py  grammar.py  grammar_decoration.py  post_fit_grammar_draws.pickle  post_fit_grammar_state_dict.torch  structure_constraint_dataset_grammar_state_dict.torch  (+3 more)
(+23 files in other folders)
